# asteroid_destroyer

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/core/: app.cpp  app.h  audio.h  entity.cpp  entity.h  time.c  time.h  ui.cpp  uimanager.h
src/game/: asteroid.cpp  asteroid.h  asteroidmanager.cpp  buttonui.cpp  buttonui.h  enemy.cpp  enemy.h  enemymanager.cpp  enemymanager.h  gamelogic.cpp  gamelogic.h  player.cpp  player.h  playet.cpp  variable.c  variables.c  variables.h
